--- a/app/src/main/res/menu/activity_main2_drawer.xml
+++ b/app/src/main/res/menu/activity_main2_drawer.xml
@@ -13,9 +13,9 @@
             android:icon="@drawable/ic_call_black_24dp"
             android:title="@string/menu_SDC" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_location"
+            android:icon="@drawable/ic_my_location_black_24dp"
+            android:title="@string/menu_location" />
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_menu_manage"
